<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="red"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:summary="@string/theme_summary"
            android:title="@string/theme" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/playback">

        <SeekBarPreference
            android:defaultValue="100"
            android:key="volume"
            android:max="100"
            android:title="@string/default_volume" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/library">

        <Preference
            android:key="prune_unused_songs"
            android:summary="@string/prune_unused_songs_summary"
            android:title="@string/prune_unused_songs" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="version"
            android:summary="1.0.0"
            android:title="@string/version" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="debug"
            android:summary="@string/debug_summary"
            android:title="@string/debug" />

    </PreferenceCategory>

</PreferenceScreen>
