<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/set_options"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_edit_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/edit_set"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_edit" />

    <TextView
        android:id="@+id/option_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/delete"
        android:textColor="@color/error"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_delete"
        app:drawableTint="@color/error" />

</LinearLayout>
