<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/song_options"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

<!--    <TextView-->
<!--        android:id="@+id/option_add_to_set"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?attr/selectableItemBackground"-->
<!--        android:drawablePadding="16dp"-->
<!--        android:padding="16dp"-->
<!--        android:text="@string/add_to_set"-->
<!--        android:textColor="@color/text_primary"-->
<!--        android:textSize="16sp"-->
<!--        app:drawableStartCompat="@drawable/ic_add" />-->

    <TextView
        android:id="@+id/option_external_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/open_in_external_player"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_play" />

<!--    <TextView-->
<!--        android:id="@+id/option_share"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?attr/selectableItemBackground"-->
<!--        android:drawablePadding="16dp"-->
<!--        android:padding="16dp"-->
<!--        android:text="@string/share"-->
<!--        android:textColor="@color/text_primary"-->
<!--        android:textSize="16sp"-->
<!--        app:drawableStartCompat="@drawable/ic_share" />-->

    <TextView
        android:id="@+id/option_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/delete"
        android:textColor="@color/error"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_delete"
        app:drawableTint="@color/error" />

</LinearLayout>
